Bug 692597 - Bad sizeof() usage in base/sdcparam.c
Summary: Bad sizeof() usage in base/sdcparam.c
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: General (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: Default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-14 16:06 UTC by Tim Waugh
Modified: 2011-10-30 02:04 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
0004-Taking-sizeof-here-gives-the-size-of-the-pointer-not.patch (1.14 KB, patch)
2011-10-14 16:06 UTC, Tim Waugh
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Waugh 2011-10-14 16:06:00 UTC
Created attachment 8007 [details]
0004-Taking-sizeof-here-gives-the-size-of-the-pointer-not.patch

Taking sizeof() here gives the size of the pointer not the array; found using Coverity.
Comment 1 Alex Cherepanov 2011-10-30 02:04:06 UTC
The patch has been adopted and committed as a rev.
66567074a91d05a27f2439cbcc43e2d2301a776f

Thank you for your contribution to Ghostscript.