Bug 692597: bad sizeof() usage in base/sdcparam.c

Taking sizeof() of an array parameter gives the size of the pointer,
not the array; found using Coverity.